fix: :bug: add `z-index: 1` to input to click on the image

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -17,6 +17,7 @@
     height: 100%;
     inset: 0;
     opacity: 0;
+    z-index: 1;
   }
 
   p {
